log
Fri May  6 15:45:17 UTC 2022: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[0]->data;
                          ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
3c8c917
Fri May  6 15:46:00 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3d83bf8
Fri May  6 15:47:34 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:22:3: error: expected ‘(’ before ‘return’
   return pq->heapArray[0].data;
   ^~~~~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
ee95ed7
Fri May  6 15:51:11 UTC 2022: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
078d5e0
Fri May  6 15:52:31 UTC 2022: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
b9ef419
